2002-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: Fix beams.

	* buildscripts/mf-to-table.py: Add EncodingScheme.

	* scm/sketch.scm: Resurrect.

2002-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/multi-measure-rest.cc: use breve rests for measure lengths
	longer than 4/4. Patch courtesy Kim Shrier <kim@tinker.com>.

2002-10-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/c++-rules.make: Fixes for bison 1.50.

	* lily/lexer.ll (My_lily_lexer): Avoid silly flex induced gcc warnings.

2002-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/my-lily-lexer.cc (prepare_for_next_token): use previous
	token for origin information.

	* lily/parser.yy (My_lily_lexer): do identifier location and
	cloning from lexer.

	* scm/music-functions.scm (make-multi-measure-rest): move mmrest
	logic out of the parser.

	* Documentation/user/refman.itely (Multi measure rests): add more
	notes about mm rests.

2002-10-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/bar-scripts.ly: Re-enable.

	* lily/parser.yy:
	* stepmake/stepmake/c++-rules.make: Fixes for bison 1.51 to be
	released rsn.  Bison 1.50 has a crucial bug and won't work.

	* lily/lexer.ll (My_lily_lexer): Avoid silly flex induced gcc warnings.


2002-10-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/bar-scripts.ly: Blunt documentation build fix.

2002-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Actually merge changes since 1.6.4 besides ChangeLog, and
	resolve conflicts.  Lots of updates, hope all is well.
	
	* cygwin/lilypond.hint (requires): Add ghostscript.

	* scm: Update some (c).
	
2002-10-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/{various}.ly: add \header fields and texidoc strings.

2002-10-05  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (output_dict) <latex>: `output_tex'
	renamed to `output_latex_quoted'.
	Added `output_latex_noquote'.
	(schedule_lilypond_block): Implement `noquote' option for LaTeX
	mode.
