@@ -297,7 +297,8 @@ Show the warranty with which GNU LilyPond comes. (It comes with
 @subsection Titling layout
 
 Ly2dvi extracts the following header fields from the LY files to
-generate titling:
+generate titling. An example demonstrating all these fields is in
+@file{input/test/ly2dvi-testpage.ly}.
 
 @table @code
 @item title
